addr-osmify-cpp: make it easier to build with sanitizers

--- a/osm/addr-osmify-cpp/Makefile
+++ b/osm/addr-osmify-cpp/Makefile
@@ -1,5 +1,13 @@
 CXXFLAGS = -g -std=c++17 -Werror -Wall -Wextra
 LDFLAGS = -pthread -lPocoFoundation -lPocoJSON -lPocoNet -lPocoNetSSL
+ifneq ($(ASAN),)
+CXXFLAGS += -fsanitize=address
+LDFLAGS += -fsanitize=address
+endif
+ifneq ($(UBSAN),)
+CXXFLAGS += -fsanitize=undefined
+LDFLAGS += -fsanitize=undefined
+endif
 
 addr-osmify: addr-osmify.cxx Makefile
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o addr-osmify addr-osmify.cxx
