osm: pycodestyle -> flake8

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -56,12 +56,12 @@ update-osmose-$(USER):
 	@mkdir -p workdir
 	curl -o workdir/osmose-$(USER).rss http://osmose.openstreetmap.fr/en/byuser/$(USER).rss
 
-PYFILES = generate-postcode-csv qa/houseless-streets.py qa/osmose.py addr-osmify
+PYFILES = generate-postcode-csv qa/houseless-streets.py qa/osmose.py addr_osmify
 
 check-style:
-	pycodestyle $(PYFILES)
-	! pylint $(PYFILES) 2>&1 | egrep -i 'unused|indent'
-	mypy --strict addr-osmify
+	flake8 $(PYFILES)
+	pylint $(PYFILES)
+	mypy --strict addr_osmify
 
 check: check-style download
 	qa/osmose.py
