addr-osmify-c: add a spinner

--- a/osm/addr-osmify-c/Makefile
+++ b/osm/addr-osmify-c/Makefile
@@ -1,5 +1,6 @@
 CXXFLAGS = -g -std=c11 -Werror -Wall -Wextra -I/usr/include/json-c
-LDFLAGS = -lcurl -ljson-c
+LDFLAGS = -lcurl -ljson-c -pthread
+# Note that sanitizers can't be combined in general, but asan and ubsan is an exception.
 ifneq ($(ASAN),)
 CXXFLAGS += -fsanitize=address
 LDFLAGS += -fsanitize=address
@@ -7,6 +8,10 @@ endif
 ifneq ($(UBSAN),)
 CXXFLAGS += -fsanitize=undefined
 LDFLAGS += -fsanitize=undefined
+endif
+ifneq ($(TSAN),)
+CXXFLAGS += -fsanitize=thread
+LDFLAGS += -fsanitize=thread
 endif
 
 addr-osmify: addr-osmify.c Makefile
