--- a/js/mid/Makefile
+++ b/js/mid/Makefile
@@ -4,7 +4,7 @@ bundle.js: main.js Makefile
 ifneq ($(DEBUG),)
 	browserify --debug -o bundle.js main.js
 else
-	browserify -t uglifyify -o bundle.js main.js
+	browserify -g uglifyify -o bundle.js main.js
 endif
 
 check:
