addr-osmify-java: improve this a bit
- do the network communication on a thread and show a spinner
- extract nested classes to their own file

--- a/osm/addr-osmify-java/Makefile
+++ b/osm/addr-osmify-java/Makefile
@@ -4,5 +4,6 @@ all:
 run:
 	java -jar target/addr-osmify-1.0-SNAPSHOT-jar-with-dependencies.jar
 
+# alias pmd="$PWD/pmd-bin-6.17.0/bin/run.sh pmd"
 check:
 	pmd -d src/main/java/ -R rulesets/java/quickstart.xml -f text
