addr-osmify-java: add doc and tags rules

--- a/osm/addr-osmify-java/Makefile
+++ b/osm/addr-osmify-java/Makefile
@@ -7,3 +7,9 @@ run:
 # alias pmd="$PWD/pmd-bin-6.17.0/bin/run.sh pmd"
 check:
 	pmd -d src/main/java/ -R rulesets/java/quickstart.xml -f text
+
+docs:
+	mvn javadoc:javadoc
+
+tags:
+	ctags --fields=+iaS --extra=+q -R --totals=yes src
