addr-osmify-cpp: split this into a cmdline tool and a lib
- now we get the benefit of automatic dependency handling around lib.hxx
from cmake (the cost was paid in an earlier commit already)
- add an initial test executable
- decouple urlopenType from Poco
- allow setter/getter for urlopen, so the moral equivalent of Python's
unittest.mock.patch('urllib.request.urlopen', ...) is possible to do

No actual testcase yet, though.

--- a/osm/addr-osmify-cpp/CMakeLists.txt
+++ b/osm/addr-osmify-cpp/CMakeLists.txt
@@ -31,13 +31,44 @@ endif()
 
 find_package(Poco REQUIRED Foundation JSON Net NetSSL)
 
-add_executable(addr-osmify addr-osmify.cxx)
-target_link_libraries(addr-osmify
+add_library(osmifycore
+    lib.cxx
+    )
+target_link_libraries(osmifycore
     Poco::Foundation
     Poco::JSON
     Poco::Net
     Poco::NetSSL
     )
+
+add_executable(addr-osmify
+    main.cxx
+    )
+target_link_libraries(addr-osmify
+    osmifycore
+    )
 install(TARGETS addr-osmify DESTINATION bin)
+
+enable_testing()
+find_package(GTest REQUIRED)
+add_executable(osmifytest
+    test.cxx
+    )
+target_link_libraries(osmifytest
+    osmifycore
+    ${GTEST_BOTH_LIBRARIES}
+    )
+add_test(NAME osmfiy
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    COMMAND osmifytest
+    )
+
+set(CMAKE_CTEST_COMMAND ctest -V)
+add_custom_target(check
+    COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIG>
+    )
+add_dependencies(check
+    osmifytest
+    )
 
 # vim:set shiftwidth=4 softtabstop=4 expandtab:
