--- a/osm/addr-osmify-kotlin/pom.xml
+++ b/osm/addr-osmify-kotlin/pom.xml
@@ -5,14 +5,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jetbrains.kotlin.examples</groupId>
-    <artifactId>hello-world</artifactId>
+    <groupId>hu.vmiklos.addr_osmify</groupId>
+    <artifactId>addr-osmify</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <name>addr-osmify</name>
+    <url>https://vmiklos.hu</url>
 
     <properties>
         <kotlin.version>1.0.3</kotlin.version>
         <junit.version>4.12</junit.version>
-        <main.class>hello.HelloKt</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -69,30 +71,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>${main.class}</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>${main.class}</mainClass>
-                </configuration>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <configuration>
+                <archive>
+                  <manifest>
+                    <mainClass>hu.vmiklos.addr_osmify.AppKt</mainClass>
+                  </manifest>
+                </archive>
+              </configuration>
             </plugin>
         </plugins>
     </build>
