--- a/osm/addr-osmify-kotlin/Makefile
+++ b/osm/addr-osmify-kotlin/Makefile
@@ -1,3 +1,6 @@
+# Java 11 seems to be problematic.
+export JAVA_HOME = /usr/lib64/jvm/java-1.8.0
+
 all:
 	mvn assembly:assembly -DdescriptorId=jar-with-dependencies
 
