--- a/js/loregression/package.json
+++ b/js/loregression/package.json
@@ -5,8 +5,8 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/domready": "^1.0.0",
-    "@types/node": "14.11.8",
+    "@types/domready": "1.0.0",
+    "@types/node": "14.11.10",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
     "domready": "1.0.8",
