--- a/osm/addr-osmify-js/package.json
+++ b/osm/addr-osmify-js/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "addr-osmify",
+  "name": "addr-osmify-js",
   "version": "1.0.0",
-  "description": "Takes an nominatim query and turns it into a string",
-  "main": "main.js",
-  "scripts": {
-    "test": "make check"
-  },
+  "description": "addr-osmify-js",
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "browser-request": "0.3.3",
     "domready": "1.0.8",
-    "querystring-browser": "1.0.4",
-    "uglifyify": "5.0.1"
+    "eslint": "7.11.0",
+    "tinyify": "3.0.0"
   }
 }
