addr-osmify-js: fix eslint warnings

--- a/osm/addr-osmify-js/.eslintrc
+++ b/osm/addr-osmify-js/.eslintrc
@@ -4,6 +4,9 @@
         "commonjs": true
     },
     "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaVersion": 2017
+    },
     "rules": {
         "linebreak-style": [
             "error",
