addr-osmify-js test: add coverage support
And add more tests, to have 100% statement coverage.

Also fix the case when there are no results from Nominatim, found by
these new tests.

--- a/osm/addr-osmify-js/Makefile
+++ b/osm/addr-osmify-js/Makefile
@@ -7,18 +7,26 @@ BROWSERIFY_OPTIONS = --plugin tinyify
 endif
 
 bundle.js: main.js package-lock.json Makefile config.mak
-	browserify -o bundle.js $(BROWSERIFY_OPTIONS) main.js
+	node_modules/.bin/browserify -o bundle.js $(BROWSERIFY_OPTIONS) main.js
 
 package-lock.json: package.json
 	npm install
+	touch package-lock.json
 
 check: check-unit check-lint
 
 check-unit:
-	node_modules/.bin/cypress run
+	tools/run-cypress.sh
 
 check-lint:
-	node_modules/eslint/bin/eslint.js main.js
+	node_modules/eslint/bin/eslint.js main.js cypress/integration/main.spec.js
 
 run:
 	python3 -m http.server
+
+check-unit-cov:
+	rm -rf .nyc_output/ coverage/
+	node_modules/.bin/browserify -o bundle.js -t browserify-istanbul main.js
+	tools/run-cypress.sh --env COVERAGE_RUN=1
+	node_modules/.bin/nyc report --statements 100 --check-coverage --reporter=text-summary
+	node_modules/.bin/nyc report --reporter=html
