--- a/osm/addr-osmify-js/package.json
+++ b/osm/addr-osmify-js/package.json
@@ -5,9 +5,15 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
+    "@cypress/code-coverage": "^3.8.3",
+    "browserify": "17.0.0",
+    "browserify-istanbul": "3.0.1",
     "cypress": "5.5.0",
     "domready": "1.0.8",
     "eslint": "7.11.0",
-    "tinyify": "3.0.0"
+    "eslint-plugin-cypress": "2.11.2",
+    "nyc": "15.1.0",
+    "tinyify": "3.0.0",
+    "wait-on": "5.2.0"
   }
 }
