js/piroska: rewrite this in TS

--- a/js/piroska/Makefile
+++ b/js/piroska/Makefile
@@ -1,16 +1,21 @@
 -include config.mak
 
 ifneq ($(DEBUG),)
+# the source map here survives both tsc and the bundling
 BROWSERIFY_OPTIONS = --debug
 else
+# tinyify works fine on the tsc output
 BROWSERIFY_OPTIONS = --plugin tinyify
 endif
 
-bundle.js: main.js package-lock.json Makefile config.mak
-	node_modules/.bin/browserify -o bundle.js $(BROWSERIFY_OPTIONS) main.js
+bundle.js: main.ts package-lock.json Makefile config.mak
+	browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin tsify main.ts
+
+package-lock.json: package.json
+	npm install
 
 check:
-	eslint main.js
+	node_modules/eslint/bin/eslint.js main.ts
 
 run:
 	python3 -m http.server
