--- a/js/piroska/package.json
+++ b/js/piroska/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "piroska",
+  "name": "addr-osmify-ts",
   "version": "1.0.0",
-  "description": "piroska",
-  "main": "main.js",
+  "description": "addr-osmify-ts",
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
+    "@types/domready": "1.0.0",
+    "@types/node": "14.11.10",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@typescript-eslint/parser": "4.4.1",
     "browserify": "17.0.0",
     "domready": "1.0.8",
-    "tinyify": "3.0.0"
+    "eslint": "7.11.0",
+    "tinyify": "3.0.0",
+    "ts-replace-all": "1.0.0",
+    "tsify": "5.0.2",
+    "typescript": "4.0.3"
   }
 }
