addr-osmify-ts: tidy this up a bit
- specify browserify version
- add missing repo field
- add make run
- bundle es2016 lib to have includes() in arrays
- avoid not needed npm install runs by doing an explicit touch

--- a/osm/addr-osmify-ts/Makefile
+++ b/osm/addr-osmify-ts/Makefile
@@ -13,6 +13,11 @@ bundle.js: main.ts package-lock.json Makefile config.mak
 
 package-lock.json: package.json
 	npm install
+	touch $@
 
 check:
 	node_modules/eslint/bin/eslint.js main.ts
+
+run:
+	python3 -m http.server
+
