--- a/osm/addr-osmify-ts/package.json
+++ b/osm/addr-osmify-ts/package.json
@@ -9,10 +9,15 @@
     "@types/node": "14.11.10",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
+    "browserify": "17.0.0",
     "domready": "1.0.8",
     "eslint": "7.11.0",
     "tinyify": "3.0.0",
     "tsify": "5.0.2",
     "typescript": "4.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vmiklos/vmexam"
   }
 }
