--- a/osm/addr-osmify-ts/Makefile
+++ b/osm/addr-osmify-ts/Makefile
@@ -15,9 +15,24 @@ package-lock.json: package.json
 	npm install
 	touch $@
 
-check:
-	node_modules/eslint/bin/eslint.js main.ts
+check: check-unit check-lint
+
+check-unit: bundle.js
+	tools/run-cypress.sh
+
+check-unit-interactive:
+	node_modules/.bin/cypress open
+
+check-lint:
+	node_modules/eslint/bin/eslint.js main.ts cypress/integration/main.spec.ts
 
 run:
 	python3 -m http.server
 
+check-unit-cov:
+	rm -rf .nyc_output/ coverage/
+	node_modules/.bin/browserify -o bundle.js --transform browserify-istanbul --plugin [ tsify --target=ES2017 ] main.ts
+	tools/run-cypress.sh --env COVERAGE_RUN=1
+	node_modules/.bin/nyc report --statements 100 --check-coverage --reporter=text-summary
+	node_modules/.bin/nyc report --reporter=html
+	rm bundle.js
