--- a/osm/addr-osmify-ts/package.json
+++ b/osm/addr-osmify-ts/package.json
@@ -5,16 +5,22 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
+    "@cypress/code-coverage": "3.8.3",
     "@types/domready": "1.0.0",
     "@types/node": "14.14.7",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
     "browserify": "17.0.0",
+    "browserify-istanbul": "3.0.1",
+    "cypress": "5.5.0",
     "domready": "1.0.8",
     "eslint": "7.13.0",
+    "eslint-plugin-cypress": "2.11.2",
+    "nyc": "15.1.0",
     "tinyify": "3.0.0",
     "tsify": "5.0.2",
-    "typescript": "4.0.5"
+    "typescript": "4.0.5",
+    "wait-on": "5.2.0"
   },
   "repository": {
     "type": "git",
