--- a/js/missing-housenumbers-leaflet/package.json
+++ b/js/missing-housenumbers-leaflet/package.json
@@ -4,11 +4,18 @@
   "license": "MIT",
   "description": "missing-housenumbers-leaflet",
   "dependencies": {
+    "@types/domready": "1.0.0",
+    "@types/leaflet": "1.5.19",
+    "@types/node": "14.14.7",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
     "browserify": "17.0.0",
     "domready": "1.0.8",
     "eslint": "7.13.0",
     "leaflet": "1.7.1",
-    "tinyify": "3.0.0"
+    "tinyify": "3.0.0",
+    "tsify": "5.0.2",
+    "typescript": "4.0.5"
   },
   "repository": {
     "type": "git",
