--- a/js/missing-housenumbers/package.json
+++ b/js/missing-housenumbers/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "missing-housenumbers",
   "version": "1.0.0",
-  "description": "missing-housenumbers",
   "author": "Miklos Vajna",
   "license": "MIT",
+  "description": "missing-housenumbers-leaflet",
   "dependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/preset-env": "7.12.1",
     "@types/domready": "1.0.0",
-    "@types/node": "14.11.10",
-    "@types/ol": "6.4.2",
+    "@types/leaflet": "1.5.19",
+    "@types/node": "14.14.7",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
-    "babelify": "10.0.0",
     "browserify": "17.0.0",
     "domready": "1.0.8",
     "eslint": "7.13.0",
-    "ol": "6.4.3",
+    "leaflet": "1.7.1",
     "tinyify": "3.0.0",
     "tsify": "5.0.2",
-    "typescript": "4.0.3"
+    "typescript": "4.0.5"
   },
   "repository": {
     "type": "git",
