--- a/js/piroska/package.json
+++ b/js/piroska/package.json
@@ -16,5 +16,9 @@
     "ts-replace-all": "1.0.0",
     "tsify": "5.0.2",
     "typescript": "4.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vmiklos/vmexam"
   }
 }
