--- a/js/mid/Makefile
+++ b/js/mid/Makefile
@@ -1,14 +1,24 @@
 -include config.mak
 
-bundle.js: main.js package-lock.json Makefile
 ifneq ($(DEBUG),)
-	browserify --debug -o bundle.js main.js
+# the source map here survives both tsc and the bundling
+BROWSERIFY_OPTIONS = --debug
 else
-	browserify --plugin tinyify -o bundle.js main.js
+# tinyify works fine on the tsc output
+BROWSERIFY_OPTIONS = --plugin tinyify
 endif
+
+bundle.js: main.ts package-lock.json Makefile config.mak
+	browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin tsify main.ts
 
 package-lock.json: package.json
 	npm install
+	touch $@
 
-check:
-	eslint main.js
+check: check-lint
+
+check-lint:
+	node_modules/eslint/bin/eslint.js main.ts
+
+run:
+	python3 -m http.server
