--- a/js/szihkcal/Makefile
+++ b/js/szihkcal/Makefile
@@ -1,11 +1,24 @@
 -include config.mak
 
-bundle.js: main.js Makefile
 ifneq ($(DEBUG),)
-	browserify --debug -o bundle.js main.js
+# the source map here survives both tsc and the bundling
+BROWSERIFY_OPTIONS = --debug
 else
-	browserify -g uglifyify -o bundle.js main.js
+# tinyify works fine on the tsc output
+BROWSERIFY_OPTIONS = --plugin tinyify
 endif
 
-check:
-	eslint main.js
+bundle.js: main.ts package-lock.json Makefile config.mak
+	node_modules/.bin/browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin tsify main.ts
+
+package-lock.json: package.json
+	npm install
+	touch $@
+
+check: check-lint
+
+check-lint:
+	node_modules/.bin/eslint main.ts
+
+run:
+	python3 -m http.server
