addr-osmify-cpp: split out poco wrapper bits to a separate urllib
Allows excluding the actual poco calls from coverage result.

And then add missing tests:

- nominatim-badjson
- overpass-badjson
- sleep a bit to excercise the spinner

--- a/osm/addr-osmify-cpp/CMakeLists.txt
+++ b/osm/addr-osmify-cpp/CMakeLists.txt
@@ -39,6 +39,7 @@ find_package(Poco REQUIRED Foundation JSON Net NetSSL)
 
 add_library(osmifycore
     lib.cxx
+    urllib.cxx
     )
 target_link_libraries(osmifycore
     Poco::Foundation
