addr-osmify-go: add more tests
Coverage goes up to 100.0%

--- a/osm/addr-osmify-go/Makefile
+++ b/osm/addr-osmify-go/Makefile
@@ -1,5 +1,23 @@
+GO_OBJECTS = \
+	addr_osmify.go \
+	addr_osmify_test.go \
+	main.go \
+	urllib.go \
+
+
 addr-osmify-go: Makefile addr_osmify.go
 	go build
 
-check:
+check: check-format check-lint check-race check-unit
+
+check-lint:
 	golint
+
+check-unit:
+	./coverage.sh
+
+check-format:
+	[ -z "$(shell gofmt -l $(GO_OBJECTS))" ]
+
+check-race:
+	go test -race
