addr-osmify-py: avoid unreadable file names in mock data

--- a/osm/addr-osmify-py/Makefile
+++ b/osm/addr-osmify-py/Makefile
@@ -14,4 +14,4 @@ check-lint:
 
 check-unit:
 	coverage run --branch --module unittest test_addr_osmify.py
-	coverage report --show-missing --fail-under=100 addr_osmify.py test_addr_osmify.py
+	coverage report --show-missing --fail-under=100 addr_osmify.py
