--- a/osm/addr-osmify-rust/Cargo.toml
+++ b/osm/addr-osmify-rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "addr-osmify-rust"
+name = "addr-osmify"
 version = "0.1.0"
 authors = ["Miklos Vajna <vmiklos@vmiklos.hu>"]
 edition = "2018"
