--- a/osm/addr-osmify-rust/Cargo.toml
+++ b/osm/addr-osmify-rust/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 atty = "0.2.14"
-reqwest = { version = "0.11.4", features = ["blocking"] }
+isahc = "1.5.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 url = "2.2.2"
