--- a/js/ovis-ora/package.json
+++ b/js/ovis-ora/package.json
@@ -5,10 +5,12 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
+    "@types/canvas-confetti": "1.4.2",
     "@types/domready": "1.0.0",
     "@types/node": "14.11.10",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
+    "canvas-confetti": "1.4.0",
     "domready": "1.0.8",
     "eslint": "7.11.0",
     "tinyify": "3.0.0",
