ovis ora: replace end text with smiley

--- a/js/ovis-ora/Makefile
+++ b/js/ovis-ora/Makefile
@@ -13,6 +13,10 @@ bundle.js: main.ts package-lock.json Makefile config.mak
 
 package-lock.json: package.json
 	npm install
+	touch package-lock.json
 
 check:
 	node_modules/eslint/bin/eslint.js main.ts
+
+install:
+	scp index.html bundle.js smiley.svg wilson:share/ovis-ora/
