addr-osmify-ts: switch to webpack
Give up on custom browserify, webpack is what everyone uses these days,
it seems.

--- a/osm/addr-osmify-ts/Makefile
+++ b/osm/addr-osmify-ts/Makefile
@@ -1,15 +1,13 @@
 -include config.mak
 
 ifneq ($(DEBUG),)
-# the source map here survives both tsc and the bundling
-BROWSERIFY_OPTIONS = --debug
+WEBPACK_OPTIONS = --mode=development
 else
-# tinyify works fine on the tsc output
-BROWSERIFY_OPTIONS = --plugin tinyify
+WEBPACK_OPTIONS = --mode=production
 endif
 
-bundle.js: main.ts package-lock.json Makefile config.mak
-	node_modules/.bin/browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin tsify main.ts
+bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile config.mak
+	npx webpack ${WEBPACK_OPTIONS} --config webpack.config.js
 
 package-lock.json: package.json
 	npm install
@@ -17,22 +15,20 @@ package-lock.json: package.json
 
 check: check-unit check-lint
 
+# Without coverage: tools/run-cypress.sh
 check-unit: bundle.js
-	tools/run-cypress.sh
+	rm -rf .nyc_output/ coverage/
+	npx webpack --config webpack-cov.config.js
+	tools/run-cypress.sh --env COVERAGE_RUN=1
+	npx nyc report --statements 100 --check-coverage --reporter=text-summary
+	npx nyc report --reporter=html
+	rm bundle.js
 
 check-unit-interactive:
-	node_modules/.bin/cypress open
+	npx cypress open
 
 check-lint:
-	node_modules/.bin/eslint main.ts cypress/integration/main.spec.ts
+	npx eslint main.ts cypress/integration/main.spec.ts
 
 run:
 	python3 -m http.server
-
-check-unit-cov:
-	rm -rf .nyc_output/ coverage/
-	node_modules/.bin/browserify -o bundle.js --transform browserify-istanbul --plugin [ tsify --target=ES2017 ] main.ts
-	tools/run-cypress.sh --env COVERAGE_RUN=1
-	node_modules/.bin/nyc report --statements 100 --check-coverage --reporter=text-summary
-	node_modules/.bin/nyc report --reporter=html
-	rm bundle.js
