--- a/osm/addr-osmify-ts/package.json
+++ b/osm/addr-osmify-ts/package.json
@@ -2,21 +2,19 @@
   "license": "MIT",
   "dependencies": {
     "@cypress/code-coverage": "3.8.3",
-    "@types/domready": "1.0.0",
+    "@jsdevtools/coverage-istanbul-loader": "3.0.5",
     "@types/node": "14.14.7",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
-    "browserify": "17.0.0",
-    "browserify-istanbul": "3.0.1",
     "cypress": "5.5.0",
-    "domready": "1.0.8",
     "eslint": "7.13.0",
     "eslint-plugin-cypress": "2.11.2",
     "nyc": "15.1.0",
-    "tinyify": "3.0.0",
-    "tsify": "5.0.2",
+    "ts-loader": "9.2.6",
     "typescript": "4.0.5",
-    "wait-on": "5.2.0"
+    "wait-on": "5.2.0",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   },
   "repository": {
     "type": "git",
