--- a/osm/addr-osmify-js/Makefile
+++ b/osm/addr-osmify-js/Makefile
@@ -15,18 +15,16 @@ package-lock.json: package.json
 
 check: check-unit check-lint
 
+# Without coverage: tools/run-cypress.sh
 check-unit:
-	tools/run-cypress.sh
+	rm -rf .nyc_output/ coverage/
+	npx webpack --config webpack-cov.config.js
+	tools/run-cypress.sh --env COVERAGE_RUN=1
+	npx nyc report --statements 100 --check-coverage --reporter=text-summary
+	npx nyc report --reporter=html
 
 check-lint:
 	npx eslint main.js cypress/integration/main.spec.js
 
 run:
 	python3 -m http.server
-
-check-unit-cov:
-	rm -rf .nyc_output/ coverage/
-	npx webpack --config webpack-cov.config.js
-	tools/run-cypress.sh --env COVERAGE_RUN=1
-	npx nyc report --statements 100 --check-coverage --reporter=text-summary
-	npx nyc report --reporter=html
