--- a/js/szavak/Makefile
+++ b/js/szavak/Makefile
@@ -1,22 +1,20 @@
 -include config.mak
 
 ifneq ($(DEBUG),)
-# the source map here survives both tsc and the bundling
-BROWSERIFY_OPTIONS = --debug
+WEBPACK_OPTIONS = --mode=development
 else
-# tinyify works fine on the tsc output
-BROWSERIFY_OPTIONS = --plugin tinyify
+WEBPACK_OPTIONS = --mode=production
 endif
 
-bundle.js: main.ts package-lock.json Makefile config.mak
-	browserify -o bundle.js $(BROWSERIFY_OPTIONS) --plugin [ tsify --noImplicitAny ] main.ts
+bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile config.mak
+	npx webpack ${WEBPACK_OPTIONS} --config webpack.config.js
 
 package-lock.json: package.json
 	npm install
 	touch package-lock.json
 
 check:
-	node_modules/eslint/bin/eslint.js main.ts
+	npx eslint main.ts
 
 install:
 	scp index.html bundle.js refresh.svg szavak.json wilson:share/szavak/
