--- a/js/szavak/package.json
+++ b/js/szavak/package.json
@@ -5,16 +5,15 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/domready": "1.0.0",
     "@types/node": "17.0.0",
     "@types/shuffle-array": "1.0.2",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "domready": "1.0.8",
+    "array-shuffle": "^3.0.0",
     "eslint": "8.4.1",
-    "shuffle-array": "1.0.1",
-    "tinyify": "3.0.0",
-    "tsify": "5.0.4",
-    "typescript": "4.5.4"
+    "ts-loader": "9.2.6",
+    "typescript": "4.5.4",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   }
 }
