--- a/js/szavak/package.json
+++ b/js/szavak/package.json
@@ -9,7 +9,9 @@
     "@types/shuffle-array": "1.0.2",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "array-shuffle": "^3.0.0",
+    "@types/canvas-confetti": "1.4.2",
+    "array-shuffle": "3.0.0",
+    "canvas-confetti": "1.4.0",
     "eslint": "8.4.1",
     "ts-loader": "9.2.6",
     "typescript": "4.5.4",
