--- a/osm/addr-osmify-rust/Cargo.toml
+++ b/osm/addr-osmify-rust/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Miklos Vajna <vmiklos@vmiklos.hu>"]
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0.55"
 atty = "0.2.14"
 isahc = "1.5.0"
 serde = { version = "1.0.126", features = ["derive"] }
