cpm: parse the xml to be imported

--- a/cpm/Makefile
+++ b/cpm/Makefile
@@ -7,7 +7,7 @@ check: build check-format check-lint
 	@echo "make check: ok"
 
 check-lint:
-	golint
+	golint -set_exit_status
 
 check-format:
 	[ -z "$(shell gofmt -l main.go)" ]
