addr-osmify-go: no need to pass args around
Turns out os.Args is writable

--- a/osm/addr-osmify-go/Makefile
+++ b/osm/addr-osmify-go/Makefile
@@ -11,7 +11,7 @@ addr-osmify-go: Makefile addr_osmify.go
 check: check-format check-lint check-race check-unit
 
 check-lint:
-	golint
+	golint -set_exit_status
 
 check-unit:
 	./coverage.sh
