addr-osmify-rust: split "not to be tested" code to system.rs
And add a test to make sure that the test code itself has full line
coverage.

--- a/osm/addr-osmify-rust/Makefile
+++ b/osm/addr-osmify-rust/Makefile
@@ -4,14 +4,14 @@ target/debug/addr-osmify: src/lib.rs src/main.rs Cargo.toml Makefile
 	cargo build
 
 check: build check-unit check-format check-clippy
+	@echo "make check: ok"
 
 check-format:
 	cargo fmt -- --check
 
 # Without coverage: cargo test --lib
 check-unit:
-	cargo llvm-cov --lib --no-report
-	cargo llvm-cov --lib --no-run --show-missing-lines --fail-under-lines 100
+	cargo llvm-cov --lib -q --ignore-filename-regex system.rs --show-missing-lines --fail-under-lines 100 -- --test-threads=1
 
 check-clippy:
 	cargo clippy
