mutt-imap-lister: use clap
To get --help handling for free.

Also break main() up to smaller functions to improve readability.

--- a/mutt-imap-lister/Cargo.toml
+++ b/mutt-imap-lister/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.68"
+clap = { version = "4.1.4", features = ["derive"] }
 home = "0.5.4"
 imap = "2.4.1"
 native-tls = "0.2.11"
